# pytest-resource-path

./: .bumpversion.cfg  .gitignore  .travis.yml  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  appveyor.yml  compose.yml  mkdocs.yml  project-words.txt  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: analyze.yml  codeql.yml  deploy.yml  qlty.yml  test.yml
docs/: index.md
pytest_resource_path/: __init__.py  absolute_path_factory.py  exceptions.py  path_factory.py  path_to_resource_factory.py  pytest_backward_compatibility.py  pytest_resource_path.py
tests/: conftest.py  test___init__.py  test_absolute_path_factory.py  test_path_factory.py  test_path_to_resource_factory.py
tests/testlibraries/: __init__.py  function_getter.py  module_getter.py  pytest_backward_compatibility.py
tests/testresources/: pytest_code.py  pytest_resource_path.py  pytest_resource_path_ini.py
